[package]
name = "plant-server"
version = "0.1.0"
authors = ["jbarszczewski <jakub.barszczewski@outlook.com>"]
edition = "2018"

[dependencies]
actix-web = "2.0"
actix-rt = "1.1.1"
bson = "1.0.0"
chrono = "0.4.11"
futures = "0.3.5"
mongodb = "1.0.0"
rustc-serialize = "0.3.24"
serde = { version = "1.0", features = ["derive"] }